Address deprecation warnings