@@ -341,10 +341,10 @@ public class Door extends CuboidToggleMechanic {
 
     public List<String> getDefaultBlocks() {
         List<String> materials = new ArrayList<>();
-        materials.add(BlockTypes.COBBLESTONE.getId());
-        materials.add(BlockTypes.GLASS.getId());
-        materials.addAll(BlockCategories.PLANKS.getAll().stream().map(BlockType::getId).collect(Collectors.toList()));
-        materials.addAll(BlockCategories.SLABS.getAll().stream().map(BlockType::getId).collect(Collectors.toList()));
+        materials.add(BlockTypes.COBBLESTONE.id());
+        materials.add(BlockTypes.GLASS.id());
+        materials.addAll(BlockCategories.PLANKS.getAll().stream().map(BlockType::id).toList());
+        materials.addAll(BlockCategories.SLABS.getAll().stream().map(BlockType::id).toList());
         return materials;
     }
 
